Caret stops blinking after context menu shown https://bugs.webkit.org/show_bug.cgi?id=191715

Patch by Jonathan Hammer <jonathan@e3software.com> on 2018-11-17
Reviewed by Ryosuke Niwa.

Source/WebCore:

Changed EventHandler::sendContextMenuEvent to un-suspend caret blinking so that
the caret continues to blink even after the context menu is dismissed. The normal
way of un-suspendeding caret blinking (in EventHandler::handleMouseReleaseEvent) does
not apply in the case of context menus because handleMouseReleaseEvent is not
called once the context menu is up.

Test: fast/events/contextmenu-dismiss-blink-caret.html

* page/EventHandler.cpp:
(WebCore::EventHandler::sendContextMenuEvent):
* testing/Internals.cpp:
(WebCore::Internals::isCaretBlinkingSuspended):
* testing/Internals.h:
* testing/Internals.idl:

LayoutTests:

* fast/events/contextmenu-dismiss-blink-caret-expected.txt: Added.
* fast/events/contextmenu-dismiss-blink-caret.html: Added.

Canonical link: https://commits.webkit.org/206524@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238345 268f45cc-cd09-0410-ab3c-d52691b4dbfc